--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -649,107 +649,107 @@ stories:
   domain: http://www.globegazette.com/
   link: https://globegazette.com/news/world/russia-s-most-advanced-fighter-jet-crashes-pilot-survives/image_ee0e4099-7d9c-519b-853e-62068a3e0266.html
 images:
-- name: locked-up-steam-lock-up-steam-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
-- name: oldcabin-oldcabin-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-spagetti-accident.jpg
-- name: dragon-desert-desert-dragon-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-mucha-mult.jpg
-- name: razorwire-DSC-0080-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-light-dali.jpg
-- name: old-cabin-oldcabin-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-pablo-blue.jpg
-- name: flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colorful-blocks.jpg
-- name: catacombs-catacombs-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-smoking-cigarette.jpg
-- name: art-museum-art-museum-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
-- name: razorcliff-razorcliff-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crunch-paper.jpg
-- name: crow-crow-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-kandinsky-bv.jpg
-- name: nazi-invasion-statue-of-liberty_35910144944_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty_35910144944_o.jpg
-- name: berlinwall2-berlinwall-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
-- name: bordercrossing-bordercrossing-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-internet-numbers.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
-- name: white-house-lawn-white-house-lawn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-hot-spicy.jpg
-- name: copper-circuit-down-side-street-shop-sign.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-down-side-street-shop-sign.jpg
-- name: legal-statue-legalstatue-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-post-modern.jpg
-- name: meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-paper.jpg
-- name: paris-paris-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-plentiful.jpg
-- name: locked-up-steam-lock-up-steam-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-brush.jpg
-- name: death-valley-death-valley-national-park-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-green-zuma.jpg
-- name: aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-smoking-cigarette.jpg
-- name: aws-s3-square-C4NLtWrWMAAMY9d.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d.jpg
-- name: old-house-oldhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-diego-rivera1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-plentiful.jpg
-- name: carry-load-carryload-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-spagetti-accident.jpg
-- name: stalin-time-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-skulls-catacomb-up-close.jpg
-- name: death-valley-death-valley-national-park-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-rainbow-festival.jpg
-- name: school-clouds-church-clouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-yellow-paper.jpg
-- name: adam-smith-adam-smith-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
-- name: 35201856153_61bc075e4b-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-copper-circuit.jpg
-- name: eduardo-eduardo-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gan-vogh.jpg
-- name: nazi-invasion-DSC_0020.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
-- name: school-clouds-church-clouds-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-smoking-cigarette.jpg
-- name: yosemite-yosemite-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-clean-view.jpg
-- name: oldbarn-oldbarn-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-asteroids.jpg
-- name: docks-docks-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
-- name: carry-load-carryload-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-dry-skin.jpg
-- name: gypsy-wagon-gypsywagon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-diego-rivera1.jpg
-- name: capital-battle-capitolbattle-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-creativity.jpg
-- name: castle-wall-DSC-0067-hot-spicy.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-hot-spicy.JPG
-- name: sand-hand-sand-hand-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
-- name: nazi-invasion-IMG_8486.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8486.jpg
-- name: gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-neo-instinct.jpg
-- name: aws-s3-smithriver-smithriver-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
-- name: stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-statues.jpg
-- name: adam-smith-adam-smith-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purp-paper.jpg
-- name: abandonedbuildings_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_smooth_ride.jpg
-- name: bluelake-purp-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-00-00-00.jpg
-- name: downtown-trucksilo-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-gred-mash.jpg
-- name: catacombs-catacombs-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-far-away.jpg
+- name: nyc-flag-nycflag-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
+- name: stalin-time-miami-beach-walkway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-miami-beach-walkway.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-5.jpg
+- name: stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dark-clouds-la-buildings.jpg
+- name: eduardo-eduardo-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-dali-two.jpg
+- name: border-crossing-bordercrossing-dali-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dali-two.png
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: locked-up-steam-lock-up-steam-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crunch-paper.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-mucha-mult.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
+- name: aws-s3-square-border-traffic-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-border-traffic-square.jpg
+- name: razorwire-DSC-0080-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
+- name: copper-circuit-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-in-station-two-coming.jpg
+- name: art-museum-art-museum-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
+- name: crow_kandinsky_bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_kandinsky_bv.jpg
+- name: bf-skinner-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-british-sgtreet-phone-booth.jpg
+- name: lincoln-memorial-lincolnmemorial-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-attack-planes.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-granite.jpg
+- name: christianity-christianity-under-construction-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
+- name: mediterranean-mediterranean-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-marcel-duchamp.jpg
+- name: window-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
+- name: oldhousecars-house-old-cars-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-ww2-dresden.jpg
+- name: wind-mills-windmills-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
+- name: oldtrain-oldtrain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: stories-freeway-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-freeway-atari-missle.jpg
+- name: mistywoods-babyfoot-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-monet-one.jpg
+- name: oldsmallboat-oldsmallboat-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-plentiful.jpg
+- name: bf-skinner-downtown-street-crosswalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-street-crosswalk.jpg
+- name: old-house-oldhouse-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-smoking-cigarette.jpg
+- name: nazi-invasion-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-skyline.jpg
+- name: carry-load-carryload-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-post-modern.jpg
+- name: old-house-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
+- name: wind-mills-windmills-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
+- name: bluelake-green-zuma-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-01-17-38.jpg
+- name: subway-subway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
+- name: downtown-los-angeles-downtown-la-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-really-hot.JPG
+- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
+- name: white-house-lawn-white-house-lawn-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-plentiful.jpg
+- name: power-lines-power-lines-empty-space-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-china-prop.jpg
+- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+- name: carry-load-carryload-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-pond.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: old-gas-pumps-oldgaspumps-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-nazi-poster.jpg
+- name: gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-mucha-mult.jpg
+- name: stories-new-72-124-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-72-124-800-500-0-max-0--1--1.jpg
+- name: berlinwall-DSC-0084-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crunch-paper.jpg
 ---
 India's Ruling Party Loses Key State Election Amid Protests.&nbsp;Persons Involved In Sunday Shooting Appear In Court.&nbsp;Katherine Heigl Thanks Husband In Sweet Anniversary Message.&nbsp;Trends On The Gambling Market.&nbsp;China, Japan, South Korea Meet On North Korea, Free Trade.&nbsp;Rocking New Christmas Music.&nbsp;Program Recycles Christmas Lights For Charity.&nbsp;Give The Gift Of Books All Year At Little Free Library.&nbsp;
